[gd_scene load_steps=6 format=3 uid="uid://main001"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/towers/tower.tscn" id="3"]
[ext_resource type="Script" path="res://scenes/main/path_draw.gd" id="4"]
[ext_resource type="Script" path="res://scripts/managers/grid_manager.gd" id="5"]
[ext_resource type="Script" path="res://scenes/main/background.gd" id="6"]

[node name="Main" type="Node2D"]
script = ExtResource("1")
tower_scene = ExtResource("3")

[node name="Background" type="Node2D" parent="."]
script = ExtResource("6")

[node name="GridManager" type="Node2D" parent="."]
script = ExtResource("5")

[node name="EnemyPath" type="Path2D" parent="."]
script = ExtResource("4")

[node name="TowersContainer" type="Node2D" parent="." groups=["towers_container"]]

[node name="GhostPreview" type="ColorRect" parent="."]
visible = false
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0, 1, 0, 0.3)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="HBoxContainer" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 900.0
offset_bottom = 50.0

[node name="LevelLabel" type="Label" parent="UI/TopBar"]
text = "Level 1"

[node name="Spacer0" type="Control" parent="UI/TopBar"]
custom_minimum_size = Vector2(30, 0)

[node name="MoneyLabel" type="Label" parent="UI/TopBar"]
text = "Gold: 100"

[node name="Spacer1" type="Control" parent="UI/TopBar"]
custom_minimum_size = Vector2(30, 0)

[node name="LivesLabel" type="Label" parent="UI/TopBar"]
text = "Lives: 20"

[node name="Spacer2" type="Control" parent="UI/TopBar"]
custom_minimum_size = Vector2(30, 0)

[node name="WaveLabel" type="Label" parent="UI/TopBar"]
text = "Wave: 0 / 10"

[node name="TowerPanel" type="PanelContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -560.0
offset_top = -85.0
offset_right = 560.0
offset_bottom = -5.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/TowerPanel"]
layout_mode = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="TowerGrid" type="GridContainer" parent="UI/TowerPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 14

[node name="StartWaveBtn" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
text = "Start Wave!"

[node name="UpgradePanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 300.0

[node name="VBox" type="VBoxContainer" parent="UI/UpgradePanel"]
layout_mode = 2
theme_override_constants/separation = 8
